test/Dialect/LLZK/struct_params_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentA1<[@A, @B]> {
    func @compute() -> !llzk.struct<@ComponentA1<[@A, @B]>> {
      %self = new_struct : !llzk.struct<@ComponentA1<[@A, @B]>>
      return %self : !llzk.struct<@ComponentA1<[@A, @B]>>
    }
    func @constrain(%self: !llzk.struct<@ComponentA1<[@A, @B]>>) { return }
  }

  llzk.struct @ComponentA2<[@C]> {
    // expected-error@+1 {{'llzk.struct' type has 3 parameters but "ComponentA1" expects 2}}
    field @f3 : !llzk.struct<@ComponentA1<[5, @C, 6]>>

    func @compute() -> !llzk.struct<@ComponentA2<[@C]>> {
      %self = new_struct : !llzk.struct<@ComponentA2<[@C]>>
      return %self : !llzk.struct<@ComponentA2<[@C]>>
    }

    func @constrain(%self: !llzk.struct<@ComponentA2<[@C]>>) { return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentB1<[@A, @B]> {
    func @compute() -> !llzk.struct<@ComponentB1<[@A, @B]>> {
      %self = new_struct : !llzk.struct<@ComponentB1<[@A, @B]>>
      return %self : !llzk.struct<@ComponentB1<[@A, @B]>>
    }
    func @constrain(%self: !llzk.struct<@ComponentB1<[@A, @B]>>) { return }
  }

  llzk.struct @ComponentB2 {
    field @f3 : !llzk.struct<@ComponentB1<[5,5]>>

    func @compute() -> !llzk.struct<@ComponentB2> {
      %self = new_struct : !llzk.struct<@ComponentB2>
      return %self : !llzk.struct<@ComponentB2>
    }

    func @constrain(%self: !llzk.struct<@ComponentB2>) {
      // expected-error@+1 {{'llzk.readf' op has wrong type; expected '!llzk.struct<@ComponentB1<[5, 5]>>', got '!llzk.struct<@ComponentB1<[5, 6]>>'}}
      %b = readf %self[@f3] : !llzk.struct<@ComponentB2>, !llzk.struct<@ComponentB1<[5,6]>>
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentC1<[@A, @B]> {
    func @compute() -> !llzk.struct<@ComponentC1<[@A, @B]>> {
      %self = new_struct : !llzk.struct<@ComponentC1<[@A, @B]>>
      return %self : !llzk.struct<@ComponentC1<[@A, @B]>>
    }
    func @constrain(%self: !llzk.struct<@ComponentC1<[@A, @B]>>) { return }
  }

  llzk.struct @ComponentC2 {
    field @f3 : !llzk.struct<@ComponentC1<[5,5]>>

    func @compute() -> !llzk.struct<@ComponentC2> {
      %self = new_struct : !llzk.struct<@ComponentC2>
      return %self : !llzk.struct<@ComponentC2>
    }

    func @constrain(%self: !llzk.struct<@ComponentC2>) {
      // expected-error@+1 {{'llzk.readf' op has wrong type; expected '!llzk.struct<@ComponentC1<[5, 5]>>', got '!llzk.struct<@ComponentC1<[5, 6, 4]>>'}}
      %b = readf %self[@f3] : !llzk.struct<@ComponentC2>, !llzk.struct<@ComponentC1<[5,6,4]>>
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentD1<[@A, @B]> {
    func @compute() -> !llzk.struct<@ComponentD1<[@A, @B]>> {
      %self = new_struct : !llzk.struct<@ComponentD1<[@A, @B]>>
      return %self : !llzk.struct<@ComponentD1<[@A, @B]>>
    }
    func @constrain(%self: !llzk.struct<@ComponentD1<[@A, @B]>>) { return }
  }

  llzk.struct @ComponentD2 {
    field @f3 : !llzk.struct<@ComponentD1<[5,5]>>

    func @compute() -> !llzk.struct<@ComponentD2> {
      %self = new_struct : !llzk.struct<@ComponentD2>
      return %self : !llzk.struct<@ComponentD2>
    }

    func @constrain(%self: !llzk.struct<@ComponentD2>) {
      // expected-error@+1 {{'llzk.readf' op has wrong type; expected '!llzk.struct<@ComponentD1<[5, 5]>>', got '!llzk.struct<@ComponentD1<[5]>>'}}
      %b = readf %self[@f3] : !llzk.struct<@ComponentD2>, !llzk.struct<@ComponentD1<[5]>>
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentF1<[@A, @B]> {
    func @compute() -> !llzk.struct<@ComponentF1<[@A, @B]>> {
      %self = new_struct : !llzk.struct<@ComponentF1<[@A, @B]>>
      return %self : !llzk.struct<@ComponentF1<[@A, @B]>>
    }
    func @constrain(%self: !llzk.struct<@ComponentF1<[@A, @B]>>) { return }
  }

  llzk.struct @ComponentF2<[@C]> {
    field @f3 : !llzk.struct<@ComponentF1<[5, @C]>>

    func @compute() -> !llzk.struct<@ComponentF2<[@C]>> {
      %self = new_struct : !llzk.struct<@ComponentF2<[@C]>>
      return %self : !llzk.struct<@ComponentF2<[@C]>>
    }

    func @constrain(%self: !llzk.struct<@ComponentF2<[@C]>>) {
      // expected-note@+1 {{prior use here}}
      %b = readf %self[@f3] : !llzk.struct<@ComponentF2<[@C]>>, !llzk.struct<@ComponentF1<[5, @C]>>
      // expected-error@+1 {{use of value '%b' expects different type than prior uses: '!llzk.struct<@ComponentF1<[5, @C, 4]>>' vs '!llzk.struct<@ComponentF1<[5, @C]>>'}}
      call @ComponentF1::@constrain(%b) : (!llzk.struct<@ComponentF1<[5,@C,4]>>) -> ()
      return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentG1<[@A, @B]> {
    func @compute() -> !llzk.struct<@ComponentG1<[@A, @B]>> {
      %self = new_struct : !llzk.struct<@ComponentG1<[@A, @B]>>
      return %self : !llzk.struct<@ComponentG1<[@A, @B]>>
    }
    func @constrain(%self: !llzk.struct<@ComponentG1<[@A, @B]>>) { return }
  }

  llzk.struct @ComponentG2<[@C]> {
    // expected-error@+1 {{'llzk.struct' type has 3 parameters but "ComponentG1" expects 2}}
    func @compute(%0: !llzk.struct<@ComponentG1<[5,@C,88]>>) -> !llzk.struct<@ComponentG2<[@C]>> {
      %self = new_struct : !llzk.struct<@ComponentG2<[@C]>>
      return %self : !llzk.struct<@ComponentG2<[@C]>>
    }

    func @constrain(%self: !llzk.struct<@ComponentG2<[@C]>>, %0: !llzk.struct<@ComponentG1<[5,@C,88]>>) {
      return
    }
  }
}
// -----
// No parameters used to reference self type within component
module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentJ<[@A, @B]> { // expected-note {{should be type of this 'llzk.struct'}}
    // expected-error@+1 {{'llzk.func' op "@compute" must use type of its parent 'llzk.struct' "@ComponentJ<[@A, @B]>" as return type}}
    func @compute() -> !llzk.struct<@ComponentJ> {
      %self = new_struct : !llzk.struct<@ComponentJ>
      return %self : !llzk.struct<@ComponentJ>
    }
    func @constrain(%self: !llzk.struct<@ComponentJ>) { return }
  }
}
// -----
// Fewer parameters used to reference self type within component
module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentK<[@A, @B]> { // expected-note {{should be type of this 'llzk.struct'}}
    // expected-error@+1 {{'llzk.func' op "@compute" must use type of its parent 'llzk.struct' "@ComponentK<[@A, @B]>" as return type}}
    func @compute() -> !llzk.struct<@ComponentK<[@A]>> {
      %self = new_struct : !llzk.struct<@ComponentK<[@A]>>
      return %self : !llzk.struct<@ComponentK<[@A]>>
    }
    func @constrain(%self: !llzk.struct<@ComponentK<[@A]>>) { return }
  }
}
// -----
// More parameters used to reference self type within component
module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentL<[@A, @B]> { // expected-note {{should be type of this 'llzk.struct'}}
    // expected-error@+1 {{'llzk.func' op "@compute" must use type of its parent 'llzk.struct' "@ComponentL<[@A, @B]>" as return type}}
    func @compute() -> !llzk.struct<@ComponentL<[@A, @B, @B]>> {
      %self = new_struct : !llzk.struct<@ComponentL<[@A, @B, @B]>>
      return %self : !llzk.struct<@ComponentL<[@A, @B, @B]>>
    }
    func @constrain(%self: !llzk.struct<@ComponentL<[@A, @B, @B]>>) { return }
  }
}
// -----
// Different parameters used to reference self type within component
module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentM<[@A, @B]> { // expected-note {{should be type of this 'llzk.struct'}}
    // expected-error@+1 {{'llzk.func' op "@compute" must use type of its parent 'llzk.struct' "@ComponentM<[@A, @B]>" as return type}}
    func @compute() -> !llzk.struct<@ComponentM<[@B, @A]>> {
      %self = new_struct : !llzk.struct<@ComponentM<[@B, @A]>>
      return %self : !llzk.struct<@ComponentM<[@B, @A]>>
    }
    func @constrain(%self: !llzk.struct<@ComponentM<[@B, @A]>>) { return }
  }
}
// -----
// Unknown parameters used to reference self type within component
module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentP<[@A, @B]> { // expected-note {{should be type of this 'llzk.struct'}}
    // expected-error@+1 {{'llzk.func' op "@compute" must use type of its parent 'llzk.struct' "@ComponentP<[@A, @B]>" as return type}}
    func @compute() -> !llzk.struct<@ComponentP<[@C, @D]>> {
      %self = new_struct : !llzk.struct<@ComponentP<[@C, @D]>>
      return %self : !llzk.struct<@ComponentP<[@C, @D]>>
    }
    func @constrain(%self: !llzk.struct<@ComponentP<[@C, @D]>>) { return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentQ1<[@Z]> { // expected-note {{type parameters must unify with parameters defined here}}
    func @compute() -> !llzk.struct<@ComponentQ1<[@Z]>> {
      %self = new_struct : !llzk.struct<@ComponentQ1<[@Z]>>
      return %self : !llzk.struct<@ComponentQ1<[@Z]>>
    }
    func @constrain(%self: !llzk.struct<@ComponentQ1<[@Z]>>)  { return }
  }
  llzk.struct @ComponentQ2 {
    // expected-error@+1 {{Cannot unify parameters of type '!llzk.struct<@ComponentQ1>' with parameters of 'llzk.struct' "@ComponentQ1<[@Z]>"}}
    llzk.field @f : !llzk.struct<@ComponentQ1>

    func @compute() -> !llzk.struct<@ComponentQ2> {
      %self = new_struct : !llzk.struct<@ComponentQ2>
      return %self : !llzk.struct<@ComponentQ2>
    }
    func @constrain(%self: !llzk.struct<@ComponentQ2>)  { return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @a {
    llzk.struct @ComponentR1<[@Z]> { // expected-note {{type parameters must unify with parameters defined here}}
      func @compute() -> !llzk.struct<@a::@ComponentR1<[@Z]>> {
        %self = new_struct : !llzk.struct<@a::@ComponentR1<[@Z]>>
        return %self : !llzk.struct<@a::@ComponentR1<[@Z]>>
      }
      func @constrain(%self: !llzk.struct<@a::@ComponentR1<[@Z]>>)  { return }
    }
  }
  module @b {
    llzk.struct @ComponentR2 {
      // expected-error@+1 {{Cannot unify parameters of type '!llzk.struct<@a::@ComponentR1>' with parameters of 'llzk.struct' "@a::@ComponentR1<[@Z]>"}}
      llzk.field @f : !llzk.struct<@a::@ComponentR1>

      func @compute() -> !llzk.struct<@b::@ComponentR2> {
        %self = new_struct : !llzk.struct<@b::@ComponentR2>
        return %self : !llzk.struct<@b::@ComponentR2>
      }
      func @constrain(%self: !llzk.struct<@b::@ComponentR2>)  { return }
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @a {
    llzk.struct @ComponentS1 {
      func @compute() -> !llzk.struct<@a::@ComponentS1> {
        %self = new_struct : !llzk.struct<@a::@ComponentS1>
        return %self : !llzk.struct<@a::@ComponentS1>
      }
      func @constrain(%self: !llzk.struct<@a::@ComponentS1>)  { return }
    }
  }
  module @b {
    llzk.struct @ComponentS2<[@A]> {
      // expected-error@+1 {{'llzk.struct' type has 2 parameters but "ComponentS1" expects 0}}
      llzk.field @f : !llzk.struct<@a::@ComponentS1<[@A, @A]>>

      func @compute() -> !llzk.struct<@b::@ComponentS2<[@A]>> {
        %self = new_struct : !llzk.struct<@b::@ComponentS2<[@A]>>
        return %self : !llzk.struct<@b::@ComponentS2<[@A]>>
      }
      func @constrain(%self: !llzk.struct<@b::@ComponentS2<[@A]>>)  { return }
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @a {
    llzk.struct @ComponentT1<[@Z]> {
      func @compute() -> !llzk.struct<@a::@ComponentT1<[@Z]>> {
        %self = new_struct : !llzk.struct<@a::@ComponentT1<[@Z]>>
        return %self : !llzk.struct<@a::@ComponentT1<[@Z]>>
      }
      func @constrain(%self: !llzk.struct<@a::@ComponentT1<[@Z]>>)  { return }
    }
  }
  module @b {
    llzk.struct @ComponentT2 {
      // expected-error@+1 {{'llzk.field' op references unknown symbol "@A"}}
      llzk.field @f : !llzk.struct<@a::@ComponentT1<[@A]>>

      func @compute() -> !llzk.struct<@b::@ComponentT2> {
        %self = new_struct : !llzk.struct<@b::@ComponentT2>
        return %self : !llzk.struct<@b::@ComponentT2>
      }
      func @constrain(%self: !llzk.struct<@b::@ComponentT2>)  { return }
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @a {
    llzk.struct @ComponentU1<[@Z]> {
      func @compute() -> !llzk.struct<@a::@ComponentU1<[@Z]>> {
        %self = new_struct : !llzk.struct<@a::@ComponentU1<[@Z]>>
        return %self : !llzk.struct<@a::@ComponentU1<[@Z]>>
      }
      func @constrain(%self: !llzk.struct<@a::@ComponentU1<[@Z]>>)  { return }
    }
  }
  module @b {
    llzk.struct @ComponentU2 {
      // expected-error@+1 {{'llzk.field' op references unknown symbol "@constrain"}}
      llzk.field @f : !llzk.struct<@a::@ComponentU1<[@constrain]>>

      func @compute() -> !llzk.struct<@b::@ComponentU2> {
        %self = new_struct : !llzk.struct<@b::@ComponentU2>
        return %self : !llzk.struct<@b::@ComponentU2>
      }
      func @constrain(%self: !llzk.struct<@b::@ComponentU2>)  { return }
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @a {
    llzk.struct @ComponentV1<[@Z]> {
      func @compute() -> !llzk.struct<@a::@ComponentV1<[@Z]>> {
        %self = new_struct : !llzk.struct<@a::@ComponentV1<[@Z]>>
        return %self : !llzk.struct<@a::@ComponentV1<[@Z]>>
      }
      func @constrain(%self: !llzk.struct<@a::@ComponentV1<[@Z]>>)  { return }
    }
  }
  module @b {
    llzk.struct @ComponentV2 {
      // expected-error@+1 {{ref "@b::@ComponentV2::@constrain" in type '!llzk.struct<@a::@ComponentV1<[@b::@ComponentV2::@constrain]>>' refers to a 'llzk.func' which is not allowed}}
      llzk.field @f : !llzk.struct<@a::@ComponentV1<[@b::@ComponentV2::@constrain]>>

      func @compute() -> !llzk.struct<@b::@ComponentV2> {
        %self = new_struct : !llzk.struct<@b::@ComponentV2>
        return %self : !llzk.struct<@b::@ComponentV2>
      }
      func @constrain(%self: !llzk.struct<@b::@ComponentV2>)  { return }
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @a {
    llzk.struct @ComponentW1<[@Z]> {
      func @compute() -> !llzk.struct<@a::@ComponentW1<[@Z]>> {
        %self = new_struct : !llzk.struct<@a::@ComponentW1<[@Z]>>
        return %self : !llzk.struct<@a::@ComponentW1<[@Z]>>
      }
      func @constrain(%self: !llzk.struct<@a::@ComponentW1<[@Z]>>)  { return }
    }
  }
  module @b {
    llzk.struct @ComponentW2 {
      // expected-error@+1 {{ref "@b" in type '!llzk.struct<@a::@ComponentW1<[@b]>>' refers to a 'builtin.module' which is not allowed}}
      llzk.field @f : !llzk.struct<@a::@ComponentW1<[@b]>>

      func @compute() -> !llzk.struct<@b::@ComponentW2> {
        %self = new_struct : !llzk.struct<@b::@ComponentW2>
        return %self : !llzk.struct<@b::@ComponentW2>
      }
      func @constrain(%self: !llzk.struct<@b::@ComponentW2>)  { return }
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentX1<[@Z]> {
    func @compute() -> !llzk.struct<@ComponentX1<[@Z]>> {
      %self = new_struct : !llzk.struct<@ComponentX1<[@Z]>>
      return %self : !llzk.struct<@ComponentX1<[@Z]>>
    }
    func @constrain(%self: !llzk.struct<@ComponentX1<[@Z]>>)  { return }
  }
  llzk.struct @ComponentX2 {
    // expected-error@+1 {{ref "@ComponentX2" in type '!llzk.struct<@ComponentX1<[@ComponentX2]>>' refers to a 'llzk.struct' which is not allowed}}
    llzk.field @f : !llzk.struct<@ComponentX1<[@ComponentX2]>>

    func @compute() -> !llzk.struct<@ComponentX2> {
      %self = new_struct : !llzk.struct<@ComponentX2>
      return %self : !llzk.struct<@ComponentX2>
    }
    func @constrain(%self: !llzk.struct<@ComponentX2>)  { return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.func private @some_function() -> ()
  llzk.struct @ComponentY1<[@Z]> {
    func @compute() -> !llzk.struct<@ComponentY1<[@Z]>> {
      %self = new_struct : !llzk.struct<@ComponentY1<[@Z]>>
      return %self : !llzk.struct<@ComponentY1<[@Z]>>
    }
    func @constrain(%self: !llzk.struct<@ComponentY1<[@Z]>>)  { return }
  }
  llzk.struct @ComponentY2 {
    // expected-error@+1 {{ref "@some_function" in type '!llzk.struct<@ComponentY1<[@some_function]>>' refers to a 'llzk.func' which is not allowed}}
    llzk.field @f : !llzk.struct<@ComponentY1<[@some_function]>>

    func @compute() -> !llzk.struct<@ComponentY2> {
      %self = new_struct : !llzk.struct<@ComponentY2>
      return %self : !llzk.struct<@ComponentY2>
    }
    func @constrain(%self: !llzk.struct<@ComponentY2>)  { return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @a {
    llzk.struct @ComponentZ1<[@Z]> {
      func @compute() -> !llzk.struct<@a::@ComponentZ1<[@Z]>> {
        %self = new_struct : !llzk.struct<@a::@ComponentZ1<[@Z]>>
        return %self : !llzk.struct<@a::@ComponentZ1<[@Z]>>
      }
      func @constrain(%self: !llzk.struct<@a::@ComponentZ1<[@Z]>>)  { return }
    }
  }
  // expected-error@+1 {{'llzk.func' op references unknown symbol "@D"}}
  llzk.func @fun3(%0: !llzk.struct<@a::@ComponentZ1<[@D]>>) -> !llzk.struct<@a::@ComponentZ1<[@D]>> {
    return %0 : !llzk.struct<@a::@ComponentZ1<[@D]>>
  }
}
